--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html {
   align-items: center;
   overflow-y: auto;
   overflow-x: hidden;
-  @apply font-inter;
+  @apply font-inter text-base;
 }
 
 #app {
