--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -305,3 +305,7 @@ Transition styles for <transition />
   opacity: 0;
   transform: translateY(-20px);
 }
+
+.createNewProjectFormItemContainer .el-form-item__error {
+  @apply w-full flex justify-center pt-2;
+}
