--- a/src/index.css
+++ b/src/index.css
@@ -285,3 +285,7 @@ Transition styles for <transition />
   opacity: 0;
   transform: translateY(-20px);
 }
+
+.createNewProjectFormItemContainer .el-form-item__error {
+  @apply w-full flex justify-center;
+}
