--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -125,7 +125,7 @@ html {
 }
 
 .hover-underline-animation:after {
-  @apply bg-secondary-600;
+  @apply bg-secondary-500;
   content: "";
   position: absolute;
   width: 100%;
@@ -209,7 +209,7 @@ html {
     @apply px-5 py-2 rounded;
     @apply text-[14px] font-medium;
     @apply text-gray-900  hover:text-secondary-600;
-    @apply border border-secondary-600 hover:border-secondary-600;
+    @apply border border-secondary-500;
     @apply hover:bg-secondary-100;
     @apply transition-all;
   }
@@ -229,7 +229,7 @@ html {
     @apply px-5 py-2 rounded;
     @apply text-[14px] font-medium;
     @apply text-black hover:text-red-700;
-    @apply border border-red-300;
+    @apply border border-red-500;
     @apply hover:bg-red-50;
     @apply transition-all;
   }
