--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -189,6 +189,7 @@ html {
   .primary-plain-button {
     @apply flex flex-row justify-center items-center;
     @apply px-5 py-2 rounded;
+    @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-gray-900  hover:text-primary-600;
     @apply border border-primary-300;
@@ -199,6 +200,7 @@ html {
   .primary-button {
     @apply flex flex-row justify-center items-center;
     @apply px-5 py-2 rounded;
+    @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-white;
     @apply border border-primary-500;
@@ -214,6 +216,7 @@ html {
   .secondary-plain-button {
     @apply flex flex-row justify-center items-center;
     @apply px-5 py-2 rounded;
+    @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-gray-900  hover:text-secondary-600;
     @apply border border-secondary-500;
@@ -224,6 +227,7 @@ html {
   .secondary-button {
     @apply flex flex-row justify-center items-center;
     @apply px-5 py-2 rounded;
+    @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-black;
     @apply border border-secondary-500;
@@ -234,6 +238,7 @@ html {
   .danger-plain-button {
     @apply flex flex-row justify-center items-center;
     @apply px-5 py-2 rounded;
+    @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-black hover:text-red-700;
     @apply border border-red-500;
@@ -244,6 +249,7 @@ html {
   .danger-button {
     @apply flex flex-row justify-center items-center;
     @apply px-5 py-2 rounded;
+    @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-red-700;
     @apply border border-red-300;
