--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -23,28 +23,6 @@ html {
   @apply h-screen w-screen;
 }
 
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: #919191 #ffffff;
-}
-
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 11px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #919191;
-  border-radius: 15px;
-  border: 3px solid #ffffff;
-}
-
 .sideBarMenuItem {
   @apply flex flex-row items-center justify-start;
   @apply mt-2 rounded-lg px-4 py-3 transition-all;
@@ -374,6 +352,10 @@ Trying to keep this minimal since we want to use much of the predefined styles a
   @apply flex flex-row items-center justify-center space-x-2;
 }
 
+.settings-tabs > .el-tabs__content {
+  @apply h-full !overflow-y-auto;
+}
+
 .zenodo-collapse-item div .el-collapse-item__header {
   @apply bg-gray-100;
 }
@@ -403,6 +385,40 @@ Trying to keep this minimal since we want to use much of the predefined styles a
 
 .v-md-editor__preview-wrapper {
   @apply bg-neutral-100/50;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* ------------------------------------------
+Custom styles for all the scrollbars
+--------------------------------------------- */
+
+*::-webkit-scrollbar {
+  width: 11px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #919191;
+  border-radius: 15px;
+  border: 3px solid #ffffff;
+}
+
+.settings-tabs > .el-tabs__content::-webkit-scrollbar {
+  width: 8px;
+}
+
+.settings-tabs > .el-tabs__content::-webkit-scrollbar-track {
+  background: #ffffff;
+  width: 9px;
+}
+
+.settings-tabs > .el-tabs__content::-webkit-scrollbar-thumb {
+  @apply bg-slate-300;
+  border-radius: 15px;
+  border: 3px solid #ffffff;
 }
 
 /* ------------------------------------------
