--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,9 +2,51 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Asap:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@font-face {
+  font-family: Inter;
+  font-weight: 100;
+  src: url(/src/assets/fonts/Inter/Inter-Thin.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 200;
+  src: url(/src/assets/fonts/Inter/Inter-ExtraLight.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 300;
+  src: url(/src/assets/fonts/Inter/Inter-Light.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 400;
+  src: url(/src/assets/fonts/Inter/Inter-Regular.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 500;
+  src: url(/src/assets/fonts/Inter/Inter-Medium.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 600;
+  src: url(/src/assets/fonts/Inter/Inter-SemiBold.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 700;
+  src: url(/src/assets/fonts/Inter/Inter-Bold.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 800;
+  src: url(/src/assets/fonts/Inter/Inter-ExtraBold.ttf) format("woff2");
+}
+@font-face {
+  font-family: Inter;
+  font-weight: 900;
+  src: url(/src/assets/fonts/Inter/Inter-Black.ttf) format("woff2");
+}
 
 body,
 html {
@@ -61,7 +103,7 @@ html {
   transform: rotate(0deg);
   @apply transition-all;
   @apply group-hover:text-primary-500;
-  @apply bg-zinc-800 group-hover:bg-primary-500;
+  @apply group-hover:bg-primary-500 bg-zinc-800;
 }
 
 #menu-hamburger span:nth-child(1) {
@@ -143,12 +185,12 @@ html {
 }
 
 .selected-project {
-  @apply border-transparent bg-primary-200 hover:bg-primary-200;
+  @apply bg-primary-200 hover:bg-primary-200 border-transparent;
 }
 
 .selected-repo,
 .selected-location {
-  @apply border border-secondary-500 shadow-md shadow-secondary-500/50;
+  @apply border-secondary-500 shadow-secondary-500/50 border shadow-md;
 }
 
 .handle:hover {
@@ -170,8 +212,8 @@ html {
     @apply rounded px-5 py-2;
     @apply min-w-[130px];
     @apply text-[14px] font-medium;
-    @apply text-gray-900  hover:text-primary-600;
-    @apply border border-primary-300;
+    @apply hover:text-primary-600  text-gray-900;
+    @apply border-primary-300 border;
     @apply hover:bg-primary-100;
     @apply transition-all;
   }
@@ -191,7 +233,7 @@ html {
     @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-white;
-    @apply border border-primary-500;
+    @apply border-primary-500 border;
     @apply bg-primary-600 hover:bg-primary-500;
     @apply transition-all;
   }
@@ -210,8 +252,8 @@ html {
     @apply rounded px-5 py-2;
     @apply min-w-[130px];
     @apply text-[14px] font-medium;
-    @apply text-gray-900  hover:text-secondary-600;
-    @apply border border-secondary-500;
+    @apply hover:text-secondary-600  text-gray-900;
+    @apply border-secondary-500 border;
     @apply hover:bg-secondary-100;
     @apply transition-all;
   }
@@ -231,7 +273,7 @@ html {
     @apply min-w-[130px];
     @apply text-[14px] font-medium;
     @apply text-white;
-    @apply border border-secondary-500;
+    @apply border-secondary-500 border;
     @apply bg-secondary-400 hover:bg-secondary-500;
     @apply transition-all;
   }
@@ -368,7 +410,7 @@ Trying to keep this minimal since we want to use much of the predefined styles a
 }
 
 .v-md-editor__tooltip {
-  @apply flex items-center justify-center font-inter;
+  @apply font-inter flex items-center justify-center;
 }
 
 .v-md-editor__toolbar-item {
