--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -374,6 +374,10 @@ Trying to keep this minimal since we want to use much of the predefined styles a
   @apply font-semibold;
 }
 
+.el-button.el-button--primary {
+  background-color: var(--el-button-bg-color);
+}
+
 .v-md-editor__tooltip {
   @apply flex items-center justify-center font-inter;
 }
