--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,30 +1,119 @@
-.storybook-button {
-  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
-  cursor: pointer;
-  display: inline-block;
-  line-height: 1;
+.primary-plain-button {
+  @apply flex flex-row items-center justify-center;
+  @apply rounded px-5 py-2;
+  @apply min-w-[130px];
+  @apply text-[14px] font-medium;
+  @apply text-gray-900  hover:text-primary-600;
+  @apply border border-primary-300;
+  @apply hover:bg-primary-100;
+  @apply transition-all;
 }
-.storybook-button--primary {
-  color: white;
-  background-color: #1ea7fd;
+
+.primary-plain-button:disabled {
+  @apply opacity-50;
+  @apply cursor-not-allowed;
 }
-.storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+
+.primary-plain-button:disabled:hover {
+  @apply bg-white text-gray-900;
 }
-.storybook-button--small {
-  font-size: 12px;
-  padding: 10px 16px;
+
+.primary-button {
+  @apply flex flex-row items-center justify-center;
+  @apply rounded px-5 py-2;
+  @apply min-w-[130px];
+  @apply text-[14px] font-medium;
+  @apply text-white;
+  @apply border border-primary-500;
+  @apply bg-primary-600 hover:bg-primary-500;
+  @apply transition-all;
 }
-.storybook-button--medium {
-  font-size: 14px;
-  padding: 11px 20px;
+
+.primary-button:disabled {
+  @apply opacity-50;
+  @apply cursor-not-allowed;
 }
-.storybook-button--large {
-  font-size: 16px;
-  padding: 12px 24px;
+
+.primary-button:disabled:hover {
+  @apply bg-primary-600 text-white;
+}
+
+.secondary-plain-button {
+  @apply flex flex-row items-center justify-center;
+  @apply rounded px-5 py-2;
+  @apply min-w-[130px];
+  @apply text-[14px] font-medium;
+  @apply text-gray-900  hover:text-secondary-600;
+  @apply border border-secondary-500;
+  @apply hover:bg-secondary-100;
+  @apply transition-all;
+}
+
+.secondary-plain-button:disabled {
+  @apply opacity-50;
+  @apply cursor-not-allowed;
+}
+
+.secondary-plain-button:disabled:hover {
+  @apply bg-white text-gray-900;
+}
+
+.secondary-button {
+  @apply flex flex-row items-center justify-center;
+  @apply rounded px-5 py-2;
+  @apply min-w-[130px];
+  @apply text-[14px] font-medium;
+  @apply text-white;
+  @apply border border-secondary-500;
+  @apply bg-secondary-400 hover:bg-secondary-500;
+  @apply transition-all;
+}
+
+.secondary-button:disabled {
+  @apply opacity-50;
+  @apply cursor-not-allowed;
+}
+
+.secondary-button:disabled:hover {
+  @apply bg-secondary-400 text-white;
+}
+
+.danger-plain-button {
+  @apply flex flex-row items-center justify-center;
+  @apply rounded px-5 py-2;
+  @apply min-w-[130px];
+  @apply text-[14px] font-medium;
+  @apply text-black hover:text-red-700;
+  @apply border border-red-500;
+  @apply hover:bg-red-50;
+  @apply transition-all;
+}
+
+.danger-plain-button:disabled {
+  @apply opacity-50;
+  @apply cursor-not-allowed;
+}
+
+.danger-plain-button:disabled:hover {
+  @apply bg-white text-gray-900;
+}
+
+.danger-button {
+  @apply flex flex-row items-center justify-center;
+  @apply rounded px-5 py-2;
+  @apply min-w-[130px];
+  @apply text-[14px] font-medium;
+  @apply text-red-700;
+  @apply border border-red-300;
+  @apply bg-red-50 hover:bg-red-100;
+  @apply transition-all;
+}
+
+.danger-button:disabled {
+  @apply opacity-50;
+  @apply cursor-not-allowed;
+}
+
+.danger-button:disabled:hover {
+  @apply bg-red-50 text-red-700;
 }
